Add POST and GET for patients.
